--- a/movies/templates/movies/base.html
+++ b/movies/templates/movies/base.html
@@ -15,7 +15,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-dark">
+    <nav class="navbar navbar-dark bg-dark">
       <nav class="navbar-brand"><a href="#">Vidly</a></nav>
     </nav>
     {% block content %}
