--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-dark">
+        <nav class="navbar navbar-dark bg-dark">
             <nav class="navbar-brand"><a href="#">Vidly</a></nav>
         </nav>
         {% block content%}
