Fix Brand Name link

--- a/movies/templates/movies/base.html
+++ b/movies/templates/movies/base.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark">
-      <nav class="navbar-brand"><a href="#">Vidly</a></nav>
+      <nav class="navbar-brand"><a href="{% url 'home' %}">Vidly</a></nav>
     </nav>
     {% block content %}
     {% endblock %}
