Add API link to homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,8 @@
 
 {% block content %}
     <div class="container">
-        <a href="{% url 'movies:index' %}">Movies</a>
+        <a href="{% url 'movies:index' %}">Movies</a><br>
+        <a href="/api/movies">API</a>
+        
     </div>
 {% endblock %}
