Fix Some typos in html files

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,12 @@
 <!doctype html>
 {% extends 'base.html' %}
+{% load static %}
+
 {% block title %}Homepage{% endblock %}
 
 {% block content %}
     <div class="container">
         <a href="{% url 'movies:index' %}">Movies</a><br>
         <a href="/api/movies">API</a>
-        
     </div>
 {% endblock %}
