--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 {% extends 'movies/base.html' %}
+{% load static %}
+
 {% block title %}Movies{% endblock %}
+
 {% block content %}
    <div class="container">
         <table class="table table-bordered table-hover">
